2007-01-30  Adam Piatyszek  <ediap@users.sourceforge.net>

	* configure.ac, extras/itpp-config.t2t, extras/txt2man.sh,
	itpp-config.1.in, Makefile.am: Added man page for itpp-config
	script

2007-01-29  Adam Piatyszek  <ediap@users.sourceforge.net>

	* itpp/comm/ldpc.cpp: Replaced long with int, since long and int
	have the same sizes on most IT++ supported architectures. If there
	is a need for 64-bit integers, (u)int64_t type should be used
	instead of long.

2007-01-28  Adam Piatyszek  <ediap@users.sourceforge.net>

	* itpp/base/random.cpp, itpp/base/random.h: Replaced "unsigned
	long" type of "seed" argument of function reset() with "unsigned
	int", because the rest of Random_Generator implementation uses
	"unsigned int" type.

	* itpp/base/itfile.cpp, itpp/comm/convcode.cpp,
	itpp/comm/convcode.h, itpp/comm/interleave.h,
	itpp/comm/punct_convcode.cpp, itpp/comm/punct_convcode.h,
	itpp/comm/turbo.cpp, itpp/comm/turbo.h, itpp/signal/resampling.h,
	itpp/srccode/gmm.cpp: Replaced long with int, since long and int
	have the same sizes on most IT++ supported architectures. If there
	is a need for 64-bit integers, due to portability
	reasons (u)int64_t type should be used instead of long.

2007-01-27  Adam Piatyszek  <ediap@users.sourceforge.net>

	* itpp/base/bessel/hyperg.cpp, itpp/comm/modulator_nd.cpp: Fixes
	to avoid warnings on possibly uninitialised variables

2007-01-26  Adam Piatyszek  <ediap@users.sourceforge.net>

	* itpp/base/math/elem_math.cpp, itpp/base/math/elem_math.h:
	Replaced long with int in binom_i() and gcd() functions, since
	long and int have the same sizes on most IT++ supported
	architectures. If there is a need for 64-bit integers, (u)int64_t
	type should be used instead of long.

2007-01-26  Erik G. Larsson  <erik_g_larsson@users.sourceforge.net>

	* itpp/comm/ldpc.cpp: Fix to avoid compiler warning

2007-01-26  Adam Piatyszek  <ediap@users.sourceforge.net>

	* itpp/base/binfile.cpp: Fixed a minor bug, which caused infinite